<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" >Poke-A-Droid </string>
    <string name="action_settings" >Settings </string>
    <string name="welcome" >Welcome to our OT project app!</string>
    <string name="devoptions" >1. Check if dev options are enabled</string>
    <string name="inject" >1.1. Inject and run APK.</string>
    <string name="root" >2. Check root permissions</string>
    <string name="remove" >2.1 Remove password or gesture</string>
    <string name="retrieve" >2.2 Retrieve pattern</string>
    <string name="bruteforce" >3. Bruteforce</string>
    <string name="cregular">Regular screen</string>
    <string name="cdimmed">Dimmed screen</string>
    <string name="cpopup">Popup screen</string>
    <string name="calib">Calibration</string>
    <string name="business">The business</string>
    <string name="gogo">Go!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
	<!-- Buttons -->
    <string name="check" >Check!</string>
    <string name="run" >Run!</string>
    <string name="loop" >Start loop!</string>
</resources>