<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/calib"
            android:id="@+id/textView"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <View
            style="@style/HorizontalLine"
            android:layout_width="fill_parent"
            android:id="@+id/view"
            android:layout_below="@+id/textView" android:layout_alignParentLeft="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cregular"
            android:id="@+id/creg"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpopup"
            android:id="@+id/cpopup"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/creg"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cdimmed"
            android:id="@+id/cdimmed"
            android:layout_below="@+id/cpopup"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/business"
            android:id="@+id/textView2"
            android:layout_below="@+id/cdimmed" android:layout_centerHorizontal="true"/>
    <View
            style="@style/HorizontalLine"
            android:layout_width="fill_parent"
            android:id="@+id/view2"
            android:layout_below="@+id/textView2" android:layout_alignParentLeft="true"/>
    <Button
            android:id="@+id/dialogButtonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gogo"
            android:layout_below="@+id/view2"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>