<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/welcome"
            android:id="@+id/textView"
            android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <View
            style="@style/HorizontalLine"
            android:layout_width="fill_parent"
            android:id="@+id/view"
            android:layout_below="@+id/textView" android:layout_alignParentLeft="true"/>
    <FrameLayout
            android:id="@+id/cameraView"
            android:layout_width="1dip" 
            android:layout_height="1dip"
            android:layout_alignParentBottom="true" android:layout_alignParentRight="true">
    </FrameLayout>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devoptions"
            android:id="@+id/devoptions"
            android:layout_below="@+id/textView" android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/cameraView"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inject"
            android:id="@+id/inject"
            android:layout_below="@+id/devoptions" android:layout_alignLeft="@+id/devoptions"
            android:layout_alignRight="@+id/devoptions"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/root"
            android:id="@+id/root"
            android:layout_below="@+id/inject" android:layout_alignLeft="@+id/inject"
            android:layout_alignRight="@+id/inject"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:id="@+id/remove"
            android:layout_below="@+id/root" android:layout_alignLeft="@+id/root"
            android:layout_alignRight="@+id/root"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrieve"
            android:id="@+id/retrieve"
            android:layout_below="@+id/remove" android:layout_alignLeft="@+id/remove"
            android:layout_alignRight="@+id/remove"/>
    <Button
            android:id="@+id/bruteForce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bruteforce"
            android:layout_below="@+id/retrieve" android:layout_alignLeft="@+id/retrieve"
            android:layout_alignRight="@+id/retrieve"/>
</RelativeLayout>
